[project]
name = "glowing-giggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "pandas==2.2.0",
    "scikit-learn==1.4.0",
]

[tool.the-framework]
model_features = [
    "feature_1",
    "feature_2",
    "feature_3",
    "feature_4",
    "feature_5",
    "feature_6",
    "feature_7",
    "feature_8",
    "feature_9",
    "feature_10",
    "feature_11",
    "feature_12",
    "feature_13",
    "feature_14",
    "feature_15",
    "feature_16",
    "feature_17",
    "feature_18",
    "feature_19",
    "feature_20",
    "feature_21",
    "feature_22",
    "feature_23",
    "feature_24",
    "feature_25",
    "feature_26",
    "feature_27",
    "feature_28",
    "feature_29",
    "feature_30"
]
model_target = "class"
model_path = "model.pkl"
