[project]
name = "glowing-giggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "pandas==2.2.0",
    "scikit-learn==1.4.0",
]

[tool.the-framework]
model_features = [
    "sepal length (cm)",
    "sepal width (cm)",
    "petal length (cm)",
    "petal width (cm)"
]
model_target = "class"
model_path = "model.pkl"
